--- a/websitestyle10.css
+++ b/websitestyle10.css
@@ -64,16 +64,76 @@
 
    position: absolute;
    top: 15px;
-   left: 260px;
+   left: 240px;
 }
 
 .downloadButtonPosition
 {      
-   width: 80px;
+   width: 30px;
    height: 30px;
    text-align: center;
-
    position: absolute;
    top: 90px;
-   left: 268px;
+   left: 228px;
+   border: none;
+}
+/* Style The Dropdown Button */
+.dropbtn {
+    
+   width: 40px;
+   height: 40px;
+   margin-left: 2.5px;
+   margin-top: 2.5px;
+   margin-right: 5px;
+   border: none;
+   cursor: pointer;
+ }
+ /* The container <div> - needed to position the dropdown content. */
+ .dropdown {
+   position: relative;
+   display: contents;
+ }
+ 
+ /* Dropdown Content (Hidden by Default) */
+ .dropdown-content {
+   display: none;
+   position: absolute;
+   background-color: #3a979f;
+   width: 120px;
+   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+   z-index: 1;
+ }
+ 
+ /* Links inside the dropdown */
+ .dropdown-content a {
+   color: black;
+   padding: 12px 16px;
+   text-decoration: none;
+   display: block;
+ }
+ 
+ /* Change color of dropdown links on hover */
+ .dropdown-content a:hover {background-color: #28676d}
+ 
+ /* Show the dropdown menu on hover */
+ .dropdown:hover .dropdown-content {
+   display: block;
+ }
+ 
+ /* Change the background color of the dropdown button when the dropdown content is shown */
+ .dropdown:hover .dropbtn {
+   background-color: #28676d;
+ }
+ /* #downloadButton {
+   width: 20px
+} */
+.searchBar {
+   position: absolute;
+   margin-top: 10px;
+   width: 250px;
+   height: 30px;
+   font-size: 17px;
+   padding-left: 6px;
+   border: none;
+   background-color: azure;
 }
