--- a/websitestyle10.css
+++ b/websitestyle10.css
@@ -1,139 +1,247 @@
-*{
-    background-color: #3a979f;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: auto;
-  }
+* {
+   background-color: #3a979f;
+   padding: 0;
+   margin: 0;
+   width: 100%;
+ }
 
-#videos 
+#videos
 {
-    width: 60%;
-    height: 10%;
-    display: block;   
-    border-radius: 4px;
-    padding-left: 2px;
-    padding-top: 2px;
-    padding-bottom: 2px;
+   width: 50%;
+   display: block;   
+   /*margin-left: 5px;*/
+   margin-left: 2%;
+   padding-top: 2%;
+   padding-bottom: 2%;
 }
 
 .parent-div 
 {      
-   width: 360px;
-   height: 125px;
-   border: solid #216066 1px;
-   border-radius: 5px;
-   margin-top: 4px;
-   margin-left: 4px;
-   padding-top: 2px;
-   padding-bottom: 2px;
-   position: relative;
-   display: block;
+  /*width: 360px;*/
+  width: 95%;
+  /*height: auto;*/  /*60%;*/
+  border-radius: 2%;
+  margin-top: 2%;
+  left: 2%;
+  
+/*margin-left: relative;*/
+  /*margin-top: 4px;
+  margin-left: 7px;
+  margin-bottom: 6px;
+  padding-top: 2px;
+  padding-bottom: 2px;*/
+  position: relative;
+  display: block;
+  box-shadow: 0 0 1.5px 1.5px #147079;
+  
 }
 
-/*.videodiv 
+.illnessText
 {      
-   width: 60%;
-   height: auto;
-   padding-left: 1px;
-   padding-top: 1px;
-   padding-bottom: 1px;
-   border-radius: 5px;
-   border: dotted 2px blue;
-   
-   position: absolute;
-   top: 5px;
-   left:  5px;
+  text-align: center;
+  margin-left: 10%;
+  padding-top: 2px;
+  
+} 
+/*
+.downloadButtonPosition
+{      
+  width: 5%;
+  text-align: center;
+  position: relative;
+  top: 68%;
+  top: 10px;
+  left: 58%;
+  border: none;
+} 
+
+.earbtn
+{      
+ width: 10%;
+ margin-left: 60%;
+ border: none;
 } */
 
-.illnessText
-{      
-   width: 90px;
-   height: 50px;
-   text-align: center;
-
-   position: absolute;
-   top: 15px;
-   left: 260px;
+/* Style The Dropdown Button */
+.dropbtn {
+  width: 10%;
+ 
+  margin-left: 7px;
+  margin-top: 8px;
+  margin-right: 5px;
+  border: none;
+  cursor: pointer;
 }
-.illnessText
-{      
-   width: 90px;
-   height: 50px;
-   text-align: center;
 
-   position: absolute;
-   top: 15px;
-   left: 240px;
+/* The container <div> - needed to position the dropdown content. */
+.dropdown {
+
+  position: relative;
+  display: contents;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #3a979f;
+  width: 120px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #28676d}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #28676d;
+}
+/* #downloadButton {
+  width: 20px
+} */
+.searchBar {
+  position: absolute;
+  margin-top: 10px;
+  margin-left: 20px;
+  width: 250px;
+  height: 30px;
+  font-size: 17px;
+  padding-left: 6px;
+  border: none;
+  background-color: azure;
+}
+
+@media only screen and (min-width: 768px)
+/*Ipad*/
+{
+
+ .wrapper{
+   width: 600px;
+   margin: 0 auto;
+  }
+
+  .illnessText
+{      
+  width: 25%;
+  height: auto;  /*10*/
+  text-align: center;
+
+  position: relative;
+  /*top: 8%;
+  left: 60%;*/
 }
 
 .downloadButtonPosition
 {      
-   width: 30px;
-   height: 30px;
-   text-align: center;
-   position: absolute;
-   top: 90px;
-   left: 228px;
-   border: none;
+  width: 4%;
+  text-align: center;
+ /* position: absolute;*/
+ position: relative;
+  /*top: 75%;
+  left: 55%;*/
+  border: none;
+} 
+
+.parent-div 
+{      
+  box-shadow: 0 0 2px 2px #147079;  
+
+  width: 45%;  /*95*/
+  /*height: 200%;*/
+  
+  border: solid #216066 1px;
+  /*border-radius: 5px;
+  margin-top: 100px;
+  margin-left: 40px;
+  padding-top: 5px;
+  padding-bottom: 10px;*/
+  position: relative;
+  float: left;
 }
-/* Style The Dropdown Button */
+
+}
+
+@media only screen and (min-width: 1000px)
+/*Laptop*/ 
+{ 
+   .wrapper{ 
+       
+ width: 1000px; 
+
+   }
+
+.parent-div 
+{  width: 45%;  /*95*/
+  /*height: 200%;*/
+  
+  
+  border: solid #216066 1px;
+  /*border-radius: 5px;
+  margin-top: 100px;
+  margin-left: 40px;
+  padding-top: 5px;
+  padding-bottom: 10px;*/
+  position: relative;
+  float: left;
+}
+
+#videos
+{
+   width: 90%;
+   display: block;   
+   border-radius: 8px;
+   margin-left: 5px;
+   padding-top: 2px;
+   padding-bottom: 2px;
+   margin-left: 5%;
+}
+
+.illnessText
+{      
+ 
+  width: 25%;
+  text-align: center;
+
+  position: relative;
+  top: 50%;
+  left: 5%;
+}
+
+.downloadButtonPosition
+{    
+
+  width: 5%;
+  text-align: center;
+  position: relative;
+  top: 50%;
+  left: 78%;
+  border: none;
+} 
+
 .dropbtn {
-    
-   width: 40px;
-   height: 40px;
-   margin-left: 2.5px;
-   margin-top: 2.5px;
-   margin-right: 5px;
-   border: none;
-   cursor: pointer;
- }
- /* The container <div> - needed to position the dropdown content. */
- .dropdown {
-   position: relative;
-   display: contents;
- }
+display: none;
  
- /* Dropdown Content (Hidden by Default) */
- .dropdown-content {
-   display: none;
-   position: absolute;
-   background-color: #3a979f;
-   width: 120px;
-   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-   z-index: 1;
- }
- 
- /* Links inside the dropdown */
- .dropdown-content a {
-   color: black;
-   padding: 12px 16px;
-   text-decoration: none;
-   display: block;
- }
- 
- /* Change color of dropdown links on hover */
- .dropdown-content a:hover {background-color: #28676d}
- 
- /* Show the dropdown menu on hover */
- .dropdown:hover .dropdown-content {
-   display: block;
- }
- 
- /* Change the background color of the dropdown button when the dropdown content is shown */
- .dropdown:hover .dropbtn {
-   background-color: #28676d;
- }
- /* #downloadButton {
-   width: 20px
-} */
-.searchBar {
-   position: absolute;
-   margin-top: 10px;
-   width: 250px;
-   height: 30px;
-   font-size: 17px;
-   padding-left: 6px;
-   border: none;
-   background-color: azure;
 }
+.searchBar {
+display: none;
+}
+ 
+}
+
+
+
+
