--- a/websitestyle10.css
+++ b/websitestyle10.css
@@ -1,13 +1,16 @@
 * {
-   background-color: #3a979f;
+   
    padding: 0;
    margin: 0;
    width: 100%;
  }
+ body{
+  background-color: #3a979f;
+ }
 
 #videos
 {
-   width: 50%;
+   width: 96%;
    display: block;   
    /*margin-left: 5px;*/
    margin-left: 2%;
@@ -17,60 +20,33 @@
 
 .parent-div 
 {      
-  /*width: 360px;*/
   width: 95%;
-  /*height: auto;*/  /*60%;*/
+  background-color: #6db4bb;
   border-radius: 2%;
   margin-top: 2%;
   left: 2%;
-  
-/*margin-left: relative;*/
-  /*margin-top: 4px;
-  margin-left: 7px;
-  margin-bottom: 6px;
-  padding-top: 2px;
-  padding-bottom: 2px;*/
   position: relative;
   display: block;
-  box-shadow: 0 0 1.5px 1.5px #147079;
-  
 }
 
-.illnessText
-{      
-  text-align: center;
-  margin-left: 10%;
-  padding-top: 2px;
-  
-} 
-
-.downloadButtonPosition
-{      
-  width: 5%;
-  text-align: center;
-  position: relative;
-  top: 68%;
-  top: 10px;
-  left: 58%;
-  border: none;
-} 
-/*
 .earbtn
 {      
- width: 10%;
- margin-left: 60%;
+ width: 8%;
+ position: relative;
  border: none;
-} */
+ left: -5%;
+ background-color: #6db4bb;
+}
 
 /* Style The Dropdown Button */
 .dropbtn {
   width: 10%;
- 
-  margin-left: 7px;
+ margin-left: 7px;
   margin-top: 8px;
   margin-right: 5px;
   border: none;
   cursor: pointer;
+  background-color: #3a979f;
 }
 
 /* The container <div> - needed to position the dropdown content. */
@@ -110,12 +86,10 @@
 .dropdown:hover .dropbtn {
   background-color: #28676d;
 }
-/* #downloadButton {
-  width: 20px
-} */
+
 .searchBar {
   position: absolute;
-  margin-top: 10px;
+  margin-top: 3.5%;
   margin-left: 20px;
   width: 250px;
   height: 30px;
@@ -128,125 +102,135 @@
 @media only screen and (min-width: 768px)
 /*Ipad*/
 {
-
  .wrapper{
    width: 600px;
-   margin: 0 auto;
+   
+  }
+  .searchButton {
+    width: 6% !important;
+    top: 1% !important;
+    left: 63% !important;
+ }
+  .searchBar {
+    height: 40px;
+    margin-top: 1.5%;
+    width: 400px;
   }
 
-  .illnessText
-{      
-  width: 25%;
-  height: auto;  /*10*/
-  text-align: center;
-
-  position: relative;
-  /*top: 8%;
-  left: 60%;*/
-}
-
-.downloadButtonPosition
-{      
-  width: 4%;
-  text-align: center;
- /* position: absolute;*/
- position: relative;
-  /*top: 75%;
-  left: 55%;*/
+.dropbtn {
+  width: 6%;
+  margin-left: 7px;
+  margin-top: 8px;
+  margin-right: 5px;
   border: none;
-} 
-
-.parent-div 
-{      
-  box-shadow: 0 0 2px 2px #147079;  
-
-  width: 45%;  /*95*/
-  /*height: 200%;*/
-  
-  border: solid #216066 1px;
-  /*border-radius: 5px;
-  margin-top: 100px;
-  margin-left: 40px;
-  padding-top: 5px;
-  padding-bottom: 10px;*/
-  position: relative;
-  float: left;
+  cursor: pointer;
 }
-
+  .parent-div {      
+    /* box-shadow: 0 0 2px 2px #147079;  
+    border: solid #216066 1px; */
+    width: 123.5%;
+  }
+  .illnessText
+  {
+    font-size: 26px !important;
+  } 
 }
 
 @media only screen and (min-width: 1000px)
 /*Laptop*/ 
 { 
-   .wrapper{ 
-       
- width: 1000px; 
-
+  .wrapper{      
+     width: 1000px; 
    }
 
-.parent-div 
-{  width: 45%;  /*95*/
-  /*height: 200%;*/
-  
-  
-  border: solid #216066 1px;
-  /*border-radius: 5px;
-  margin-top: 100px;
-  margin-left: 40px;
-  padding-top: 5px;
-  padding-bottom: 10px;*/
-  position: relative;
-  float: left;
+  .parent-div 
+  { width: 45%;
+    position: relative;
+    float: left;
+  }
+
+  #videos
+  {
+    width: 90%;
+    display: block;   
+    border-radius: 8px;
+    margin-left: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin-left: 5%;
+  }
+
+  .dropbtn {
+    display: none;
+  }
+
+  .searchBar{
+    position: absolute;
+    margin: 0;
+    margin-top: 5px;
+  }
+  .searchButton{
+    left: 43.8% !important;
+    width: 2.5% !important;
+    top: 0.4% !important;
+  }
+
+  #navbar ul { 
+    /* margin: 0; */
+    height: 55px;
+    /* list-style-type: none;  */
+    text-align: left;
+    font-size: larger;
+    font-family: Ebrima;
+    font-weight: bold; 
+    background-color: #28676d; 
+    
+    } 
+
+  #navbar ul li {  
+    display: inline;
+    } 
+   
+  #navbar ul li a { 
+    padding: 0.2em 1em;
+    text-decoration: none; 
+    color: #a6c6c9; 
+    background-color: #28676d; 
+    
+    } 
+   
+  #navbar ul li a:hover { 
+    color: #28676d; 
+    background-color: #6db4bb;
+     
+    } 
 }
 
-#videos
-{
-   width: 90%;
-   display: block;   
-   border-radius: 8px;
-   margin-left: 5px;
-   padding-top: 2px;
-   padding-bottom: 2px;
-   margin-left: 5%;
+.searchButton {
+  position: absolute;
+  width: 8%;
+  left: 88%;
+  top: 2%;
 }
 
 .illnessText
 {      
- 
-  width: 25%;
-  text-align: center;
-
-  position: relative;
-  top: 50%;
-  left: 5%;
+  text-align: left;
+  width: initial;
+  font-family: Ebrima;
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 2%;
+  padding-bottom: 1%;
 }
-
-.downloadButtonPosition
-{    
-
-  width: 5%;
-  text-align: center;
+.downloadButton {
+  width: 20px;
+}
+.downloadBtnPos
+{      
+  width: 8%;
   position: relative;
-  top: 50%;
-  left: 78%;
+  left: 15%;
   border: none;
+  background-color: #6db4bb;
 } 
-
-.dropbtn {
-display: none;
- 
-}
-.searchBar {
-display: none;
-}
- 
-}
-#searchButton {
-  width: 30px;
-  margin-left: 260px;
-  margin-bottom: 3px;
-  
-}
-
-
-
